changed labels permissions, overflow to tasks, images in tasks, text decorations in tasks and solved double email

--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -211,8 +211,6 @@
 	
 	height: 30px;
 	padding: 0;
-//	overflow:hidden;
-//	text-overflow:ellipsis;
 	word-wrap:break-word;
 
 }
@@ -229,7 +227,7 @@
 	height: 30px;
 	width: 30px;
 
-	margin: 5px;
+	margin-top: 5px;
 	border-radius: 4px;
 
 }
