--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -106,3 +106,9 @@
    box-shadow: 3px 3px 1px 1px #CCCCCC;
 }
 
+.overflow-wrapper h5 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
